[package]
name = "actix-di"
version = "0.1.1"
edition = "2021"
authors = ["anil <anil.krcp@gmail.com>"]
description = "A dependency injection system for Actix web applications"
license = "MIT"
repository = "https://github.com/krcpa/actix-di"
keywords = ["actix-web", "dependency-injection", "di", "web", "services"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
actix-web = "4.0"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
assert_matches = "1.5"